Created a new file MarketV2OPT for optimizing the Create Market parameters to achieve 0.29 sol market Creation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,7 +71,7 @@
   },
   "eslint.alwaysShowStatus": true,
   "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "prettier.configPath": ".prettierrc"
 }
